2014-12-16  Dana Burkart  <dburkart@apple.com>

        Merged r177325. <rdar://problem/19198414>

    2014-12-15  Beth Dakin  <bdakin@apple.com>

            Speculative build fix.

            * platform/spi/mac/LookupSPI.h:

    2014-12-15  Jer Noble  <jer.noble@apple.com>

            Switching src of <video> with clipping layer results in empty black square.
            https://bugs.webkit.org/show_bug.cgi?id=139650

            Reviewed by Simon Fraser.

            Test: compositing/video-clip-change-src.html

            When the contentsLayer changes after a contentsClippingLayer has already been created, make sure to parent the
            new contentsLayer, as updateRects() will only reparent when first creating a contentsClippingLayer.

            * platform/graphics/ca/GraphicsLayerCA.cpp:
            (WebCore::GraphicsLayerCA::setContentsToPlatformLayer):

2014-12-16  Dana Burkart  <dburkart@apple.com>

        Merged r177323. <rdar://problem/19198414>

    2014-12-15  Beth Dakin  <bdakin@apple.com>

            Make lookup an immediate action instead of an action menu item
            https://bugs.webkit.org/show_bug.cgi?id=139661
            -and corresponding-
            rdar://problem/19198414

            Reviewed by Tim Horton.

            New SPI.
            * platform/spi/mac/LookupSPI.h:

2014-12-16  Dana Burkart  <dburkart@apple.com>

        Merged r177303. <rdar://problem/19198539>

    2014-12-15  Timothy Horton  <timothy_horton@apple.com>

            Implement Data Detectors immediate actions for WebKit2
            https://bugs.webkit.org/show_bug.cgi?id=139617
            <rdar://problem/19198539>

            Reviewed by Beth Dakin.

            * platform/spi/mac/DataDetectorsSPI.h:
            Add some new SPI.

    2014-12-12  Simon Fraser  <simon.fraser@apple.com>

            REGRESSION (r168217): Images are cropped out during animation at jetblue.com
            https://bugs.webkit.org/show_bug.cgi?id=136410