@@ -48,10 +48,14 @@ SOFT_LINK_CLASS_OPTIONAL(Lookup, LULookupDefinitionModule)
 
 #endif // !USE(APPLE_INTERNAL_SDK)
 
+#if  __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
+
 @interface LULookupDefinitionModule (AnimationController)
 
 + (id<NSImmediateActionAnimationController>)lookupAnimationControllerForTerm:(NSAttributedString *)term atLocation:(NSPoint)screenPoint options:(NSDictionary *)options;
 
 @end
+
+#endif // __MAC_OS_X_VERSION_MIN_REQUIRED >= 101000
 
 #endif // PLATFORM(MAC)
