@@ -1,5 +1,15 @@
 2014-12-16  Dana Burkart  <dburkart@apple.com>
 
+        Merged r177326. <rdar://problem/19198414>
+
+    2014-12-15  Beth Dakin  <bdakin@apple.com>
+
+            Speculative build fix.
+
+            * platform/spi/mac/LookupSPI.h:
+
+2014-12-16  Dana Burkart  <dburkart@apple.com>
+
         Merged r177325. <rdar://problem/19198414>
 
     2014-12-15  Beth Dakin  <bdakin@apple.com>
